--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+# python==3.10
 # pip install -r requirements.txt
+
 
 # base ----------------------------------------
 Cython
@@ -9,14 +11,17 @@ Pillow
 PyYAML>=5.3.1
 scipy>=1.4.1
 tensorboard>=2.2
+--extra-index-url https://download.pytorch.org/whl/cpu
 torch>=1.7.0
+--extra-index-url https://download.pytorch.org/whl/cpu
 torchvision>=0.8.1
-tensorflow==2.3.0rc0
+# tensorflow==2.3.0rc0
 tqdm>=4.41.0
 easydict
 absl-py
 lxml
-google-colab
+tensorflow
+# google-colab
 
 
 # logging -------------------------------------
