--- a/requirements-gpu.txt
+++ b/requirements-gpu.txt
@@ -9,14 +9,15 @@ Pillow
 PyYAML>=5.3.1
 scipy>=1.4.1
 tensorboard>=2.2
-torch>=1.7.0
-torchvision>=0.8.1
-tensorflow-gpu==2.3.0rc0
+# torch>=1.7.0
+# torchvision>=0.8.1
+# tensorflow-gpu==2.3.0rc0
 tqdm>=4.41.0
 easydict
 absl-py
 lxml
-google-colab
+tensorflow
+# google-colab
 
 
 # logging -------------------------------------
